fix: swagger docs fix for balance and config
